# Matugenium

./: README.md  install.sh  pyproject.toml
matugenium/: __init__.py  cli.py  detect.py  generate.py  state.py
scripts/: install-local.sh  install.py
tests/: test_cli.py  test_detect.py
